[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
select = "0.6"
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["derive"] }
